fixing nav/menu interaction and z-index issue on mobile

--- a/src/css/components/visuals/index.styl
+++ b/src/css/components/visuals/index.styl
@@ -21,3 +21,8 @@
   .container
     width 94%
 
+  .fixed
+    transition all 350ms ease-out
+    &.nav-open
+      left 0
+      transform translate(410px, 0)
